# rust-boy

./: .gitignore  Cargo.toml  README.md  gbemulator.toml
games/: pokemon_red.sav
src/: audio_output.rs  cpu.rs  emulation.rs  lib.rs  main.rs
src/config/: audio.rs  config.rs  controls.rs  mod.rs
src/controls/: keyboard_controller.rs
src/graphics/: gameboy_screen.rs  window.rs
src/graphics/gui/: controls_window.rs  main_menu.rs  mod.rs  palette_window.rs
src/lib/: emulation.rs  gpu.rs  interrupt_flags.rs  joypad.rs  memory_bus.rs  register.rs  timer.rs
src/lib/apu/: apu.rs  mixer.rs  mod.rs
src/lib/apu/channel/: frame_sequencer.rs  noise_channel.rs  square_channel.rs  wave_channel.rs
src/lib/cartridge/: cartridge_base.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  regions.rs  rom_only.rs
src/lib/cpu/: cpu.rs  interrupt_handler.rs  mod.rs  registers.rs
src/lib/cpu/instructions/: cb_instructions.rs  functions.rs  instructions.rs  mod.rs
src/lib/gpu/: gpu.rs
src/lib/io/: joypad.rs  timer.rs
src/lib/memory/: mmu.rs
src/savegame/: filesystem_ram_dumper.rs
