[package]
name = "rust-boy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
minifb = "0.10.7"
clap = "2.32.0"

[features]
serialize = ["serde", "serde_derive"]